--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -14,9 +14,5 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y python3-pip
-      - name: Install dependencies
-        run: |
-          sudo python3 -m pip install --upgrade pip
-          sudo python3 -m pip install mypy
       - name: Run mypy
-        run: mypy snap7 test
+        run: make mypy
