add universal2 build; add python3.10 to job matrix; update classifiers in setup.py

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,15 +1,15 @@
 name: Linux Test all Pythons
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
