--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -96,7 +96,7 @@ jobs:
 
   osx-build:
     name: Build wheel for osx
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -121,23 +121,26 @@ jobs:
           mkdir src
           cp snap7-full-1.4.2/release/Wrappers/c-cpp/snap7.h src
           cp .github/build_scripts/dummy.c ./
+          cp .github/build_scripts/arm64_osx.mk snap7-full-1.4.2/build/osx/
           pushd snap7-full-1.4.2/build/osx/
           make -f x86_64_osx.mk all
-          cp ../bin/x86_64-osx/libsnap7.dylib  /usr/local/lib
+          make -f arm64_osx.mk all
+          lipo -create -output /usr/local/lib/libsnap7.dylib ../bin/x86_64-osx/libsnap7.dylib ../bin/arm64-osx/libsnap7.dylib
           install_name_tool -id /usr/local/lib/libsnap7.dylib /usr/local/lib/libsnap7.dylib
 
       - name: Install cibuildwheel
-        run: python3 -m pip install cibuildwheel==1.10.0 wheel --upgrade
+        run: python3 -m pip install cibuildwheel wheel --upgrade
 
       - name: Build pure python wheel
-        run: python3 setup.py bdist_wheel --plat-name=macosx_10_9_x86_64
+        run: python3 setup.py bdist_wheel --plat-name=macosx_10_9_universal2
 
       - name: Build platform wheel
-        uses: joerick/cibuildwheel@v1.11.0
+        uses: pypa/cibuildwheel@v2.1.3
         with:
           output-dir: wheelhouse
         env:
-          CIBW_BUILD: cp36-macosx_x86_64
+          CIBW_BUILD: cp38-macosx_universal2
+          CIBW_ARCHS_MACOS: universal2
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: "BUILD_WHEEL_WITH_EXTENSION=1"
 
@@ -157,7 +160,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
