--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Repack wheel
         run: .github/build_scripts/repack_wheel_windows.ps1 Win64 wheelhouse/${{ runner.os }}
 
-      - uses: actions/upload-artifact@v2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: wheelhouse/*/*.whl
@@ -72,11 +73,12 @@ jobs:
           mkdir src
           cp snap7-full-1.4.2/release/Wrappers/c-cpp/snap7.h src
           cp .github/build_scripts/dummy.c ./
+
       - name: Build pure python wheel
         run: python3 setup.py bdist_wheel --plat-name=manylinux1_x86_64
 
       - name: Build platform wheel
-        uses: joerick/cibuildwheel@v1.11.0
+        uses: pypa/cibuildwheel@v2.1.3
         with:
           output-dir: wheelhouse
         env:
@@ -88,7 +90,7 @@ jobs:
       - name: Repack wheel
         run: bash .github/build_scripts/repack_wheel.sh wheelhouse dist wheelhouse/${{ runner.os }}
 
-      - name: upload artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: wheels
@@ -147,14 +149,14 @@ jobs:
       - name: Repack wheel
         run: bash .github/build_scripts/repack_wheel.sh wheelhouse dist wheelhouse/${{ runner.os }}
 
-      - name: upload artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: wheelhouse/*/*.whl
 
   test-wheels:
-    name: testing wheels
+    name: Testing wheels
     needs: [windows-build, linux-build, osx-build]
     runs-on: ${{ matrix.os }}
     strategy:
@@ -175,12 +177,13 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install pytest
 
-      - uses: actions/download-artifact@v2
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
         with:
           name: wheels
           path: wheelhouse
 
-      - name: install python-snap7
+      - name: Install python-snap7
         run: python3 -m pip install $(ls wheelhouse/${{ runner.os }}/*.whl)
 
       - name: Run pytest
