--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Repack wheel
         run: .github/build_scripts/repack_wheel_windows.ps1 Win64 wheelhouse/${{ runner.os }}
 
-      - uses: actions/upload-artifact@v2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: wheelhouse/*/*.whl
@@ -72,11 +73,12 @@ jobs:
           mkdir src
           cp snap7-full-1.4.2/release/Wrappers/c-cpp/snap7.h src
           cp .github/build_scripts/dummy.c ./
+
       - name: Build pure python wheel
         run: python3 setup.py bdist_wheel --plat-name=manylinux1_x86_64
 
       - name: Build platform wheel
-        uses: joerick/cibuildwheel@v1.11.0
+        uses: pypa/cibuildwheel@v2.1.3
         with:
           output-dir: wheelhouse
         env:
@@ -88,7 +90,7 @@ jobs:
       - name: Repack wheel
         run: bash .github/build_scripts/repack_wheel.sh wheelhouse dist wheelhouse/${{ runner.os }}
 
-      - name: upload artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: wheels
@@ -96,7 +98,7 @@ jobs:
 
   osx-build:
     name: Build wheel for osx
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -121,43 +123,46 @@ jobs:
           mkdir src
           cp snap7-full-1.4.2/release/Wrappers/c-cpp/snap7.h src
           cp .github/build_scripts/dummy.c ./
+          cp .github/build_scripts/arm64_osx.mk snap7-full-1.4.2/build/osx/
           pushd snap7-full-1.4.2/build/osx/
           make -f x86_64_osx.mk all
-          cp ../bin/x86_64-osx/libsnap7.dylib  /usr/local/lib
+          make -f arm64_osx.mk all
+          lipo -create -output /usr/local/lib/libsnap7.dylib ../bin/x86_64-osx/libsnap7.dylib ../bin/arm64-osx/libsnap7.dylib
           install_name_tool -id /usr/local/lib/libsnap7.dylib /usr/local/lib/libsnap7.dylib
 
       - name: Install cibuildwheel
-        run: python3 -m pip install cibuildwheel==1.10.0 wheel --upgrade
+        run: python3 -m pip install cibuildwheel wheel --upgrade
 
       - name: Build pure python wheel
-        run: python3 setup.py bdist_wheel --plat-name=macosx_10_9_x86_64
+        run: python3 setup.py bdist_wheel --plat-name=macosx_10_9_universal2
 
       - name: Build platform wheel
-        uses: joerick/cibuildwheel@v1.11.0
+        uses: pypa/cibuildwheel@v2.1.3
         with:
           output-dir: wheelhouse
         env:
-          CIBW_BUILD: cp36-macosx_x86_64
+          CIBW_BUILD: cp38-macosx_universal2
+          CIBW_ARCHS_MACOS: universal2
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: "BUILD_WHEEL_WITH_EXTENSION=1"
 
       - name: Repack wheel
         run: bash .github/build_scripts/repack_wheel.sh wheelhouse dist wheelhouse/${{ runner.os }}
 
-      - name: upload artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: wheelhouse/*/*.whl
 
   test-wheels:
-    name: testing wheels
+    name: Testing wheels
     needs: [windows-build, linux-build, osx-build]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -172,12 +177,13 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install pytest
 
-      - uses: actions/download-artifact@v2
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
         with:
           name: wheels
           path: wheelhouse
 
-      - name: install python-snap7
+      - name: Install python-snap7
         run: python3 -m pip install $(ls wheelhouse/${{ runner.os }}/*.whl)
 
       - name: Run pytest
