--- a/.github/workflows/test-pypi-packages.yml
+++ b/.github/workflows/test-pypi-packages.yml
@@ -27,16 +27,16 @@ jobs:
       - name: Run pytest
         run: |
           which pytest
-          pytest test/test_server.py test/test_util.py test/test_client.py
+          pytest tests/test_server.py tests/test_util.py tests/test_client.py
 
       - name: Run tests required sudo
         if: ${{ runner.os == 'Linux'}}
-        run: sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest test/test_partner.py
+        run: sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest tests/test_partner.py
 
       - name: Run test_partner.py on windows
         if: ${{ runner.os == 'Windows' }}
-        run: pytest test/test_partner.py
+        run: pytest tests/test_partner.py
 
       - name: Run tests required sudo
         if: ${{ runner.os == 'macOS'}}
-        run: sudo pytest test/test_partner.py
+        run: sudo pytest tests/test_partner.py
