--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -18,7 +18,7 @@ jobs:
         run: python3 -m pip install .[test]
       - name: Run pytest
         run: |
-          pytest test/test_server.py test/test_client.py test/test_util.py test/test_mainloop.py
-          sudo pytest test/test_partner.py
+          pytest tests/test_server.py tests/test_client.py tests/test_util.py tests/test_mainloop.py
+          sudo pytest tests/test_partner.py
 
 
