--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Install python libraries
         run: python.exe -m pip install .[test]
       - name: Run tests
-        run: pytest.exe  test/test_client.py test/test_util.py test/test_partner.py test/test_mainloop.py
+        run: pytest.exe  tests/test_client.py tests/test_util.py tests/test_partner.py tests/test_mainloop.py
