--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           output-dir: wheelhouse
         env:
-          CIBW_BUILD: cp36-manylinux_x86_64
+          CIBW_BUILD: cp37-manylinux_x86_64
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
           CIBW_ENVIRONMENT: "BUILD_WHEEL_WITH_EXTENSION=1"
           CIBW_BEFORE_ALL_LINUX: cd snap7-full-1.4.2/build/unix/;make -f x86_64_linux.mk install
@@ -162,7 +162,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
