--- a/.github/workflows/build-and-test-arm64.yml
+++ b/.github/workflows/build-and-test-arm64.yml
@@ -41,6 +41,9 @@ jobs:
         with:
           platforms: arm64
 
+      - name: Update wheel
+        run: python -m pip install --upgrade wheel
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.3
         with:
