--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,11 @@ ignore_missing_imports = True
 
 [tool:pytest]
 asyncio_mode = auto
+markers =
+    client
+    common
+    logo
+    mainloop
+    partner
+    server
+    util
