--- a/.github/workflows/build-and-test-arm64.yml
+++ b/.github/workflows/build-and-test-arm64.yml
@@ -4,8 +4,6 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-env:
-  snap7-archive-url: https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
 jobs:
   arm64-build:
     name: Build arm64 wheel
@@ -13,36 +11,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Cache snap7-archive
-        id: snap7-archive
-        uses: actions/cache@v3
-        with:
-          path: snap7-full-1.4.2.7z
-          key: ${{ env.snap7-archive-url }}
-
-      - name: Get snap7
-        if: steps.snap7-archive.outputs.cache-hit != 'true'
-        run: |
-          wget -O snap7-full-1.4.2.7z --content-disposition -c ${{ env.snap7-archive-url }}
-
-      - name: Extract archive
-        run: 7z x snap7-full-1.4.2.7z
+      
+      - name: prepare snap7 archive
+        uses: ./.github/actions/prepare_snap7
 
       - name: Copy files
         run: |
-          mkdir src
-          cp snap7-full-1.4.2/release/Wrappers/c-cpp/snap7.h src
-          cp .github/build_scripts/dummy.c ./
           cp .github/build_scripts/aarch64-linux-gnu.mk snap7-full-1.4.2/build/unix/
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
           platforms: arm64
-
-      - name: Update wheel
-        run: python -m pip install --upgrade wheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.3
@@ -72,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -90,7 +70,8 @@ jobs:
 
       - name: Run tests in docker:arm64v8
         run: |
-          docker run --rm --interactive -v $PWD/test:/test -v $PWD/wheelhouse:/wheelhouse "arm64v8/python:${{ matrix.python-version }}-buster" /bin/bash -s <<EOF 
-          python -m pip install pytest $(ls wheelhouse/${{ runner.os }}/*.whl)
-          python -m pytest test/test_server.py test/test_util.py test/test_client.py test/test_mainloop.py test/test_partner.py
+          docker run --rm --interactive -v $PWD/tests:/tests -v $PWD/setup.cfg:/setup.cfg -v $PWD/wheelhouse:/wheelhouse \
+            "arm64v8/python:${{ matrix.python-version }}-buster" /bin/bash -s <<EOF 
+          python3 -m pip install pytest pytest-asyncio $(ls wheelhouse/${{ runner.os }}/*.whl)
+          python3 -m pytest tests/ -m server -m util -m client -m mainloop -m partner
           EOF
