--- a/.github/workflows/test-pypi-packages.yml
+++ b/.github/workflows/test-pypi-packages.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -27,16 +27,16 @@ jobs:
       - name: Run pytest
         run: |
           which pytest
-          pytest test/test_server.py test/test_util.py test/test_client.py
+          pytest -m "server or util or client or mainloop"
 
       - name: Run tests required sudo
         if: ${{ runner.os == 'Linux'}}
-        run: sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest test/test_partner.py
-
-      - name: Run test_partner.py on windows
-        if: ${{ runner.os == 'Windows' }}
-        run: pytest test/test_partner.py
+        run: sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest -m partner
 
       - name: Run tests required sudo
         if: ${{ runner.os == 'macOS'}}
-        run: sudo pytest test/test_partner.py
+        run: sudo pytest -m partner
+
+      - name: Run tests required sudo
+        if: ${{ runner.os == 'Windows'}}
+        run: pytest -m partner
