--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,19 +11,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install choco packages
-        run: |
-          choco install 7zip python
-          choco install --allow-downgrade wget --version 1.20.3.20190531
+
+      - name: prepare snap7 archive
+        uses: ./.github/actions/prepare_snap7
+
       - name: Get snap7
         run: |
-          wget.exe -O snap7-full-1.4.2.7z --content-disposition -c https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
-          7z x snap7-full-1.4.2.7z
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll snap7\.
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll C:\Windows\System32\.
-      - name: Upgrade pip and wheel for all pythons
-        run:  python.exe -m pip install --upgrade pip wheel
+
       - name: Install python libraries
-        run: python.exe -m pip install .[test]
+        run: python3.exe -m pip install .[test]
+
       - name: Run tests
-        run: pytest.exe  test/test_client.py test/test_util.py test/test_partner.py test/test_mainloop.py
+        run: python3 -m pytest -m "server or util or client or mainloop or partner"
