--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,7 @@
 name: Create and publish a package
 on:
   push:
-    branches: [master]
+    branches: ["master"]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
